external-crates/move/crates/move-compiler/tests/move_check/verification/spec_only_do_filter_invariant_return_exp2.exp
error[E03005]: unbound unscoped name
  ┌─ tests/move_check/verification/spec_only_do_filter_invariant_return_exp2.move:9:13
  │
9 │             invariant!(something)
  │             ^^^^^^^^^ Unbound function 'invariant' in current scope

error[E03009]: unbound variable
  ┌─ tests/move_check/verification/spec_only_do_filter_invariant_return_exp2.move:9:24
  │
9 │             invariant!(something)
  │                        ^^^^^^^^^ Unbound variable 'something'

